<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation"
    >
    <string name="app_name">GO Tool Set</string>
    <string name="app_id" translatable="false">ca-app-pub-5186073457003228~4205954395</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_iv">IV Calc (Coming Soon)</string>
    <string name="button_type">Type Guide</string>
    <string name="heading_type_guide">GOtoolset type guide</string>
    <string name="head_type_attack">Attacking</string>
    <string name="head_type_defense">Defending</string>
    <string name="about_disclaimer">
        Pokémon and Pokémon character names are trademarks of Nintendo. Other trademarks are the property of their respective owners.
    </string>
    <string name="help_attack_title">Attack Effectiveness</string>
    <string name="help_attack_paragraph1">
        These values descripe, how effective the chosen type is, regarding the various possible
        opponents types. Values of 1 are not shown, as they have a "normal" effectiveness. 2 means
        they are "very effective" and cause double damage, like FIRE does on GRASS. 0.5 means your
        chosen type is "not very effective" and causes only half damage, like FIRE on WATER.\n
        If you choose 2 types, this column is empty, because there are no attacks with two types.
    </string>
    <string name="help_example">Example</string>
    <string name="help_example_1">Chosen:</string>
    <string name="help_example_2">attacks</string>
    <string name="help_defense_title">Defense Effectiveness</string>
    <string name="help_defense_paragraph1">
        These values describe, how the chosen type affects the defense regarding the various
        types of opponents attacks. When you choose FIRE, you can see the value 0.5 next to
        the WATER icon, which means, that a monster of type fire has only half its defense
        against water attacks. If a monster has two different types, their impact on the
        defense value is multiplied.
    </string>
    <string name="help_defexample">Example</string>
    <string name="help_defexample_1">Chosen:</string>
    <string name="help_defexample_2">attacked by</string>
    <string name="help_damage1">= 2x damage</string>
    <string name="help_damage2">= 1/2 damage</string>
    <string name="help_def1">= 2x defense</string>
    <string name="help_def2">= 1/2 defense</string>
    <string name="iv_trainer_lvl">Trainer Level</string>
    <string name="iv_cp">CP</string>
    <string name="iv_hp">HP</string>
    <string name="iv_stardust">Star Dust Cost</string>
    <string name="iv_avg">Average Potential</string>
    <string name="iv_calc_button">Calculate IVs</string>
    <string name="info_about">Pokémon of this type</string>
    <string name="about_dev">developed by</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id2">ca-app-pub-3940256099942544/6300978111</string>
    <string-array name="generation_list">
        <item>Red, Green, Blue &amp; Yellow</item>
        <item>Gold, Silver &amp; Crystal</item>
        <item>Ruby, Sapphire &amp; Crystal</item>
        <item>Diamond, Pearl &amp; Platinum / HeartGold &amp; SoulSilver</item>
        <item>Black &amp; White / Black &amp; White 2</item>
        <item>X &amp; Y / Omega Ruby &amp; Alpha Sapphire</item>
        <item>Sun &amp; Moon</item>
    </string-array>
    <string-array name="type_list">
        <item>Any</item>
        <item>Normal</item>
        <item>Fighting</item>
        <item>Flying</item>
        <item>Poison</item>
        <item>Ground</item>
        <item>Rock</item>
        <item>Bug</item>
        <item>Ghost</item>
        <item>Steel</item>
        <item>Fire</item>
        <item>Water</item>
        <item>Grass</item>
        <item>Electric</item>
        <item>Psychic</item>
        <item>Ice</item>
        <item>Dragon</item>
        <item>Dark</item>
        <item>Fairy</item>
    </string-array>
    <string-array name="type_colors">
        <item>#d3d7cf</item>
        <item>#888a85</item>
        <item>#e9b96e</item>
        <item>#888a85</item>
        <item>#75507b</item>
        <item>#c17d11</item>
        <item>#555753</item>
        <item>#c7e754</item>
        <item>#736672</item>
        <item>#98b2cd</item>
        <item>#cc0000</item>
        <item>#3465a4</item>
        <item>#4e9a06</item>
        <item>#ffcf00</item>
        <item>#4d1e71</item>
        <item>#87c1ff</item>
        <item>#790000</item>
        <item>#171717</item>
        <item>#ff7cd8</item>
    </string-array>
    <string-array name="poke_list">
        <item>Bulbasaur</item>
        <item>Ivysaur</item>
        <item>Venusaur</item>
        <item>Charmander</item>
        <item>Charmeleon</item>
        <item>Charizard</item>
        <item>Squirtle</item>
        <item>Wartortle</item>
        <item>Blastoise</item>
        <item>Caterpie</item>
        <item>Metapod</item>
        <item>Butterfree</item>
        <item>Weedle</item>
        <item>Kakuna</item>
        <item>Beedrill</item>
        <item>Pidgey</item>
        <item>Pidgeotto</item>
        <item>Pidgeot</item>
        <item>Rattata</item>
        <item>Raticate</item>
        <item>Spearow</item>
        <item>Fearow</item>
        <item>Ekans</item>
        <item>Arbok</item>
        <item>Pikachu</item>
        <item>Raichu</item>
        <item>Sandshrew</item>
        <item>Sandslash</item>
        <item>Nidoran♀</item>
        <item>Nidorina</item>
        <item>Nidoqueen</item>
        <item>Nidoran♂</item>
        <item>Nidorino</item>
        <item>Nidoking</item>
        <item>Clefairy</item>
        <item>Clefable</item>
        <item>Vulpix</item>
        <item>Ninetales</item>
        <item>Jigglypuff</item>
        <item>Wigglytuff</item>
        <item>Zubat</item>
        <item>Golbat</item>
        <item>Oddish</item>
        <item>Gloom</item>
        <item>Vileplume</item>
        <item>Paras</item>
        <item>Parasect</item>
        <item>Venonat</item>
        <item>Venomoth</item>
        <item>Diglett</item>
        <item>Dugtrio</item>
        <item>Meowth</item>
        <item>Persian</item>
        <item>Psyduck</item>
        <item>Golduck</item>
        <item>Mankey</item>
        <item>Primeape</item>
        <item>Growlithe</item>
        <item>Arcanine</item>
        <item>Poliwag</item>
        <item>Poliwhirl</item>
        <item>Poliwrath</item>
        <item>Abra</item>
        <item>Kadabra</item>
        <item>Alakazam</item>
        <item>Machop</item>
        <item>Machoke</item>
        <item>Machamp</item>
        <item>Bellsprout</item>
        <item>Weepinbell</item>
        <item>Victreebel</item>
        <item>Tentacool</item>
        <item>Tentacruel</item>
        <item>Geodude</item>
        <item>Graveler</item>
        <item>Golem</item>
        <item>Ponyta</item>
        <item>Rapidash</item>
        <item>Slowpoke</item>
        <item>Slowbro</item>
        <item>Magnemite</item>
        <item>Magneton</item>
        <item>Farfetch\'d</item>
        <item>Doduo</item>
        <item>Dodrio</item>
        <item>Seel</item>
        <item>Dewgong</item>
        <item>Grimer</item>
        <item>Muk</item>
        <item>Shellder</item>
        <item>Cloyster</item>
        <item>Gastly</item>
        <item>Haunter</item>
        <item>Gengar</item>
        <item>Onix</item>
        <item>Drowzee</item>
        <item>Hypno</item>
        <item>Krabby</item>
        <item>Kingler</item>
        <item>Voltorb</item>
        <item>Electrode</item>
        <item>Exeggcute</item>
        <item>Exeggutor</item>
        <item>Cubone</item>
        <item>Marowak</item>
        <item>Hitmonlee</item>
        <item>Hitmonchan</item>
        <item>Lickitung</item>
        <item>Koffing</item>
        <item>Weezing</item>
        <item>Rhyhorn</item>
        <item>Rhydon</item>
        <item>Chansey</item>
        <item>Tangela</item>
        <item>Kangaskhan</item>
        <item>Horsea</item>
        <item>Seadra</item>
        <item>Goldeen</item>
        <item>Seaking</item>
        <item>Staryu</item>
        <item>Starmie</item>
        <item>Mr.Mime</item>
        <item>Scyther</item>
        <item>Jynx</item>
        <item>Electabuzz</item>
        <item>Magmar</item>
        <item>Pinsir</item>
        <item>Tauros</item>
        <item>Magikarp</item>
        <item>Gyarados</item>
        <item>Lapras</item>
        <item>Ditto</item>
        <item>Eevee</item>
        <item>Vaporeon</item>
        <item>Jolteon</item>
        <item>Flareon</item>
        <item>Porygon</item>
        <item>Omanyte</item>
        <item>Omastar</item>
        <item>Kabuto</item>
        <item>Kabutops</item>
        <item>Aerodactyl</item>
        <item>Snorlax</item>
        <item>Articuno</item>
        <item>Zapdos</item>
        <item>Moltres</item>
        <item>Dratini</item>
        <item>Dragonair</item>
        <item>Dragonite</item>
        <item>Mewtwo</item>
        <item>Mew</item>
    </string-array>
</resources>