<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.limbusdev.gotoolset.HelpAttackActivity"
    android:padding="0dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/imageView7"
            android:layout_centerHorizontal="true"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/imageView7"
                android:src="@drawable/sword"
                android:background="#eb5757"
                android:scaleType="fitCenter"
                android:padding="16dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal"
                android:hint="@string/help_attack_title"
                style="@style/HelpItemPaddingVerticalHeading"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:hint="@string/help_attack_paragraph1"
                android:textAppearance="@android:style/TextAppearance.Medium"
                style="@style/HelpItemPaddingVertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textView5"
                android:hint="@string/help_example"
                style="@style/HelpItemPaddingVerticalHeading"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/HelpItemPaddingVertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textView10"
                    style="@style/HelpItemHorizontal"
                    android:hint="@string/help_example_1"/>

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:id="@+id/imageView8"
                    android:src="@drawable/type_water"
                    android:layout_gravity="center_vertical"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textView6"
                    android:layout_gravity="center_vertical"
                    style="@style/HelpItemHorizontal"
                    android:hint="@string/help_example_2"/>

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:id="@+id/imageView9"
                    android:src="@drawable/type_fire"
                    android:layout_gravity="center_vertical"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/help_damage1"
                    android:id="@+id/textView7"
                    android:layout_gravity="center_vertical"
                    style="@style/HelpItemHorizontal"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/HelpItemPaddingVertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textView11"
                    style="@style/HelpItemHorizontal"
                    android:hint="@string/help_example_1"/>

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:id="@+id/imageView10"
                    android:src="@drawable/type_fire"
                    android:layout_gravity="center_vertical"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textView8"
                    android:layout_gravity="center_vertical"
                    style="@style/HelpItemHorizontal"
                    android:hint="@string/help_example_2"/>

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:id="@+id/imageView11"
                    android:src="@drawable/type_water"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/help_damage2"
                    android:id="@+id/textView9"
                    android:layout_gravity="center_vertical"
                    style="@style/HelpItemHorizontal"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
